# curl4j

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.MD  README.md  build.gradle  settings.gradle
.github/scripts/: build_curl.sh  build_libffi.sh  repack_curl_win64.sh
.github/scripts/build_curl/: .gitignore  Makefile  probe.c
.github/scripts/patches/curl/: patch-0000-brotli-1.1.0-static.patch  patch-0000-use-brotli-static.patch
.github/scripts/patches/musl/: 0000-getauxval-null-guard.patch  0000-libc-lazy-init.patch
.github/scripts/patches/quiche/: patch-0000-quiche-use-ring-0.17.0.patch
.github/workflows/: build.yml  build.yml.disabled  build_curl.yml  build_curl_v2.yml  build_libffi.yml  build_v2.yml  check.yml  native-build.yml
curl_build/: Makefile
docs/: EXAMPLES.md  INSTALLING.md
java9/: .gitignore  build.gradle
java9/src/main/java/net/covers1624/curl4j/util/: CleaningCurlHandle.java
native_build/: .gitignore  Makefile
native_build/jni_helpers/: jawt_md.h  jni_md.h  jvm_md.h
native_build/scripts/: download.sh
src/main/c/: net_covers1624_curl4j_CURL_Functions.c  net_covers1624_curl4j_CurlHeaderCallback.c  net_covers1624_curl4j_CurlReadCallback.c  net_covers1624_curl4j_CurlWriteCallback.c  net_covers1624_curl4j_CurlXferInfoCallback.c  net_covers1624_curl4j_core_Callback.c  net_covers1624_curl4j_core_Memory.c  net_covers1624_curl4j_core_NativeTypes.c  utils.c  utils.h
src/main/c/unix/: net_covers1624_curl4j_core_Library_UnixLibrary.c
src/main/c/windows/: net_covers1624_curl4j_core_Library_WindowsLibrary.c
src/main/java/net/covers1624/curl4j/: CABundle.java  CURL.java  CURLCallback.java  CURLMsg.java  CURLUtils.java  CurlCallback.java  CurlHeaderCallback.java  CurlHeaderCallbackI.java  CurlReadCallback.java  CurlReadCallbackI.java  CurlSeekCallback.java  CurlSeekCallbackI.java  CurlWriteCallback.java  CurlWriteCallbackI.java  CurlXferInfoCallback.java  CurlXferInfoCallbackI.java  ErrorBuffer.java  InfoResult.java  LibCurl.java  curl_blob.java  curl_slist.java  curl_version_info_data.java
src/main/java/net/covers1624/curl4j/core/: Architecture.java  Callback.java  LibC.java  Library.java  LibraryLoader.java  Memory.java  NativeType.java  NativeTypes.java  OperatingSystem.java  Pointer.java  Reflect.java  Struct.java
src/main/java/net/covers1624/curl4j/httpapi/: Curl4jEngineRequest.java  Curl4jEngineResponse.java  Curl4jHttpEngine.java  Curl4jHttpException.java  HandlePool.java  IncrementalCurl4jResponse.java  NativeBuffer.java  package-info.java
src/main/java/net/covers1624/curl4j/util/: CLikeStructParser.java  CLikeSymbolLinker.java  CLikeSymbolResolver.java  CurlBindable.java  CurlHandle.java  CurlInput.java  CurlMimeBody.java  CurlMultiHandle.java  CurlOutput.java  ForeignUtils.java  HeaderCollector.java  LibCurl.java  MemoryCurlOutput.java  SListHeaderWrapper.java  StructUtils.java
src/main/java/net/covers1624/curl4j/util/internal/: CurlHandleFactory.java  FinalizingCurlHandleFactory.java
src/test/java/net/covers1624/curl4j/: CURLTests.java  CallbackExceptionTests.java  CurlErrorBufferTests.java
src/test/java/net/covers1624/curl4j/core/: MemoryTests.java
src/test/java/net/covers1624/curl4j/tests/: TestBase.java  TestWebServer.java
src/test/java/net/covers1624/curl4j/util/: TestCurlHandle.java
src/test/resources/: selfsigned.jks  selfsigned.sh
(+1 files in other folders)
